# secure-kill-switch

./: .eslintrc.js  .gitignore  .release-it.json  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.github/workflows/: publish_app.yml  release_app.yml  test.yml
apps/app/: package.json
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/icons/: icon.icns
apps/app/src-tauri/src/: main.rs
apps/app/src/app/: layout.tsx  page.tsx
apps/app/src/components/: ClientView.tsx  LoginView.tsx  RealtimeComponent.tsx
apps/app/src/helpers/: executeAction.ts  ping.ts  realtime.ts  store.ts  uuid.ts
apps/sks-web/: README.md  package.json
apps/sks-web/app/: background.css  layout.tsx  page.tsx
apps/sks-web/components/: ClientIcon.tsx  GlassBox.module.css  NewClientForm.tsx  NewUserForm.tsx  StatsBox.tsx  client-actions.tsx  client-id-copy-button.tsx  clients-item-details-modal.tsx  clients-item.tsx  clients-list.tsx  glass-box.tsx  index.ts  new-client-form.tsx  new-user-form.tsx  page-container.tsx  stats-box.tsx
apps/sks-web/components/clients-item/: clients-item-details-main-modal-wrapper.tsx  clients-item-details-main-modal.tsx  clients-item-details-modal-buttons.tsx  clients-item.tsx  index.tsx
apps/sks-web/components/clients-list/: ClientIdCopyButton.tsx  ClientsItem.tsx  ClientsItemDetailsChangeNameModal.tsx  ClientsList.tsx  (+3 more)
apps/sks-web/handlers/: create-client.ts  create-user.ts  get-clients.ts  get-user.ts  remove-client.ts  revalidate-path.ts
apps/sks-web/helpers/: client-icons.tsx  fonts.ts  modal-zindex.ts  name-generator-options.ts  shorten-id.ts  theme.ts  time-ago.ts
apps/sks-web/prisma/: schema.prisma
apps/sks-web/types/: enhanced-client.ts
apps/web/: .eslintrc.js  next.config.js  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/: ClientIcon.tsx  GlassBox.module.css  GlassBox.tsx  NewClientForm.tsx  NewUserForm.tsx  index.ts
apps/web/handlers/: change-name-client.ts  create-client.ts  create-user.ts  get-clients.ts  get-stats.ts  get-user.ts  remove-client.ts  show-notification-client.ts
apps/web/helpers/: prisma.ts  theme.ts
apps/web/types/: enhanced-client.ts
(+26 files in other folders)
