[package]
name = "sks-app"
version = "0.1.2"
description = "Secure Kill Switch"
authors = [ "Marcin Ciarka" ]
license = ""
repository = ""
default-run = "sks-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "window-show", "window-hide", "window-close", "system-tray", "notification-all"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
system_shutdown = "*"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
