[package]
name = "sks-app"
version = "0.1.4"
description = "Secure Kill Switch"
authors = [ "Marcin Ciarka" ]
license = ""
repository = ""
default-run = "sks-app"
edition = "2021"
rust-version = "1.60"

[build-dependencies.tauri-build]
version = "1.5.1"
features = [ ]

[dependencies]
serde_json = "1.0"
system_shutdown = "*"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.tauri]
  version = "1.6.1"
  features = [ "shell-open",
  "window-show",
  "window-hide",
  "window-close",
  "system-tray",
  "notification-all"
]

  [dependencies.tauri-plugin-store]
  git = "https://github.com/tauri-apps/plugins-workspace"
  branch = "v1"

  [dependencies.tauri-plugin-autostart]
  git = "https://github.com/tauri-apps/plugins-workspace"
  branch = "v1"

  [dependencies.fix-path-env]
  git = "https://github.com/tauri-apps/fix-path-env-rs"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
